# ec

./: .gitignore  DEPLOY.md  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/catalog/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py  wms_client.py
backend/catalog/management/commands/: gen_placeholder_images.py  seed_prices.py  seed_product_images.py  sync_skus_from_wms.py
backend/catalog/migrations/: 0001_initial.py  0002_ecproduct_manufacturer_name.py
backend/config/: settings.py  urls.py
backend/customers/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/customers/migrations/: 0001_initial.py
backend/deploy/: gunicorn-ec.service  nginx-ec.conf
backend/orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/orders/migrations/: 0001_initial.py  0002_order_orderitem.py  0003_alter_order_status.py  0004_alter_cartitem_options.py
frontend/: .env.example  .env.production  .gitignore  index.html  pnpm-lock.yaml
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  cart.ts  catalog.ts  http.ts  orders.ts  types.ts
frontend/src/auth/: AuthContext.tsx  tokenStore.ts
frontend/src/cart/: CartContext.tsx
frontend/src/components/: AccountPanel.tsx  AddToCartButton.tsx  BottomNav.tsx  CategoryChips.tsx  CategorySidebar.tsx  Footer.tsx  Header.tsx  Pagination.tsx  ProductCard.tsx  ProductGrid.tsx  ProductList.tsx  RequireAuth.tsx  StockBadge.tsx  Toast.tsx  ui.ts
frontend/src/pages/: CartPage.tsx  CheckoutPage.tsx  LoginPage.tsx  (+5 more)
(+1 files in other folders)
