[project]
name = "ec-backend"
version = "0.1.0"
description = "EC サイト backend（Django + DRF）。WMS と HTTP API で連携する。"
requires-python = ">=3.12"
dependencies = [
    "django>=5.0,<6.0",
    "django-cors-headers>=4.9.0",
    "djangorestframework>=3.17.1",
    "djangorestframework-simplejwt>=5.5.1",
    "drf-spectacular>=0.29.0",
    "gunicorn>=26.0.0",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# 自動生成される migrations はフォーマット・lint 対象外にする
# （Django が再生成すると差分が出てしまうため）
extend-exclude = ["**/migrations/*.py"]

[tool.ruff.format]
# WMS リポジトリと統一するためシングルクォートにする
quote-style = "single"
